--- a/bio.html
+++ b/bio.html
@@ -12,6 +12,26 @@
 
   <body>
   
+  <div class="container">
+
+      <div class="navbar">
+
+        <div class="navbar-inner">
+
+          <ul class="nav">
+
+            <li><a href="index.html">Home</a></li>
+  
+            <li class="active"><a href="bio.html">Bio</a></li>
+
+            <li><a href="resume.html">Resume</a></li>
+
+          </ul>
+
+        </div>
+
+      </div>
+  
   <p><p>
   
   </body>
