--- a/bio.html
+++ b/bio.html
@@ -6,6 +6,8 @@
   
   <link rel="stylesheet" type="text/css" href="bootstrap.css">
   
+  <link rel="stylesheet" type="text/css" href="style.css">
+  
   <title>Boi</title>
 
   </head>
