--- a/bio.html
+++ b/bio.html
@@ -38,7 +38,7 @@
 
 <h3>Bio</h3>
   
-  <p>   My name is auri mcclure, and i graduated from perspectives with somewhat above average gradws. I am 15 years old and will become 16 in December 27. I like playing sports. MY faverate sport i baceball i am an exceptional player. I will be going back to perspectives for my freshman year, but i will leave my souphmore year to a school that has an exceptional team.   </p>
+  <p>   My name is auri mcclure, and i graduated from perspectives with somewhat above average grades. I am 15 years old and will become 16 in December 27. I like playing sports. MY faverate sport i baceball i am an exceptional player. I will be going back to perspectives for my freshman year, but i will leave my souphmore year to a school that has an exceptional team.   </p>
   
   </body>
 
