--- a/bio.html
+++ b/bio.html
@@ -38,7 +38,7 @@
 
 <h3>Bio</h3>
   
-  <p>   My name is auri mcclure, and i graduated from perspectives with somewhat above average grades. I am 15 years old and will become 16 in December 27. I like playing sports. MY faverate sport i baceball i am an exceptional player. I will be going back to perspectives for my freshman year, but i will leave my souphmore year to a school that has an exceptional team.   </p>
+  <p>   My name is auri mcclure, and i am an A B student . I am 15 years old and my birth day is on December 27. I like playing sports. MY faverate sports are baceball, foootball, and basketball am an exceptional player. I will be attending a noble charter school for my freshman year year, but i will leave my souphmore year to a school that has an exceptional team. When i grow up i want to be a robotic engineer that builds helpful robots that take over comon human jobs such as carpintry, police officer, and, doctors. But beforethat i want to get into a good collage such as yale or harvard and pledge as a nuke. Then i want to buy a house to support myself, and the family i am hoping to have some day.   </p>
   
   </body>
 
