--- a/bio.html
+++ b/bio.html
@@ -40,7 +40,7 @@
   
   <p>   My name is auri mcclure, and i am an A B student . I am 15 years old and my birth day is on December 27. I like playing sports. MY faverate sports are baceball, foootball, and basketball am an exceptional player. I will be attending a noble charter school for my freshman year year, but i will leave my souphmore year to a school that has an exceptional team. When i grow up i want to be a robotic engineer that builds helpful robots that take over comon human jobs such as carpintry, police officer, and, doctors. But beforethat i want to get into a good collage such as yale or harvard and pledge as a nuke. Then i want to buy a house to support myself, and the family i am hoping to have some day.   </p>
   
-  <img></img>
+  <img>https://f.cloud.github.com/assets/5040652/1052951/b3a54b98-10e6-11e3-8415-78fef8380ea4.jpg</img>
   
   </body>
 
