--- a/bio.html
+++ b/bio.html
@@ -42,7 +42,7 @@
   
     <div class="container">
   
-      <img>https://f.cloud.github.com/assets/5040652/1052951/b3a54b98-10e6-11e3-8415-78fef8380ea4.jpg</img>
+      <img src="">
     
     </div>
   
