--- a/bio.html
+++ b/bio.html
@@ -38,7 +38,7 @@
 
 <h3>Bio</h3>
   
-  <p>   My name is Auri Mcclure, and i am an A B student . 
+  <p>   My name is Auri Mcclure, and I am an A B student . 
   I am 15 years old and my birth day is on December 27.
   I like playing sports. MY faverate sports are baceball, foootball and i am an exceptional player.
   I am attending drw trading college prep which is a noble school for my freshman year,
